# ai-snippets

./: .containerignore  CLAUDE.md  Containerfile  README.md  install.sh  mcp-http.json
mcp-server/: README.md  embedder.py  main.py  pyproject.toml
snippets/chroma-vector-store/: README.md  SUMMARY.md  main.py  pyproject.toml
snippets/claude-agent-file-search/: README.md  SUMMARY.md  main.py  mypy.ini  pyproject.toml
snippets/claude-agent-file-search/test-files/: api_routes.py  database_config.json  deployment_guide.md  payment_processor.py  user_authentication.py
snippets/fastmcp-stdio-server/: README.md  SUMMARY.md  main.py  pyproject.toml
snippets/poml-work-order-evaluator/: README.md  SUMMARY.md  main.py  pyproject.toml
snippets/pydantic-graph-basics/: README.md  SUMMARY.md  main.py  pyproject.toml
snippets/rag-foundation/: README.md  SUMMARY.md  main.py  pyproject.toml  rag.md
snippets/sentence-transformer-basics/: README.md  SUMMARY.md  main.py  pyproject.toml
snippets/sentiment-agent-eval/: README.md  SUMMARY.md  main.py  pyproject.toml
snippets/simple-pdf-to-markdown/: README.md  SUMMARY.md  main.py  pyproject.toml
snippets/summarize-with-openai/: .gitignore  README.md  SUMMARY.md  main.py  prompt  pyproject.toml
snippets/summarize-with-openai/incident-reports/: sample.md
