[project]
name = "chroma-vector-store"
version = "0.1.0"
description = "A RAG application using LangChain, Ollama, and Chroma"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "langchain-chroma>=0.1.4",
    "python-dotenv>=1.1.0",
    "chromadb>=0.5.23",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.8",
    "watchdog>=6.0.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D211", "D213", "T201"]