[project]
name = "fastmcp-stdio-server"
version = "0.1.0"
description = "A FastMCP server using stdio transport for MCP client communication"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.8",
    "watchdog>=6.0.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D211", "D213", "T201"]
