[project]
name = "simple-pdf-to-markdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.10",
    "watchdog>=6.0.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201"]
