[project]
name = "summarize-with-openai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.77.0",
    "pydantic-ai>=0.1.10",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.8",
    "watchdog>=6.0.0",
]
